# prompt-craft-arena

./: .env.example  .gitignore  CLAUDE.md  PRINCIPLES.md  README.md  decisions.md  pyproject.toml
data/: leaderboard.json  test_leaderboard.json
scripts/: run-backend.sh  share.sh
server/: app.py  config.py  leaderboard.py  metrics.py
server/history/: summary.py
server/realtime/: connection.py  protocol.py
server/rooms/: manager.py  room.py  state.py
server/services/: image_gen.py  judge.py  objective_pool.py  scoring.py  seed_prompts.py
server/tests/: test_api.py  test_game_flow.py  test_leaderboard.py  test_objective_pool.py  test_protocol.py  test_providers.py  test_scoring.py  test_state.py  test_target_prompts.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: game.spec.ts  mobile.spec.ts
web/playwright-report/: index.html
web/src/: App.tsx  api.ts  config.ts  i18n.test.ts  scorecard.test.ts  scorecard.ts  store.test.ts  store.ts  styles.css  types.ts  ws.ts
web/src/components/: ImageCard.tsx  LanguageMenu.tsx  Leaderboard.test.tsx  Leaderboard.tsx  PromptInput.tsx  Scoreboard.tsx  Timer.tsx
web/src/i18n/: index.ts  translations.ts
web/src/screens/: GameOver.tsx  Home.tsx  Lobby.tsx  Prompting.tsx  Reveal.tsx  Scoring.tsx
